tests/compile_fail/on_a_const_function.rs
use michie::memoized;

#[memoized]
const fn f() -> () {
    ()
}

fn main() {}
