tests/compile_fail/on_a_const_function.stderr
error: Mandatory `key_expr` was not specified via the attributes.
 --> tests/compile_fail/on_a_const_function.rs:3:1
  |
3 | #[memoized]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
